--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,16 +34,13 @@
 
 <table>
   <tr>
+    <th>Rank</th>
     <th>Country</th>
     <th>Deaths</th>
   </tr>
-
-  <tr *ngFor="let item of data">
+  <tr *ngFor="let item of sortedData; let i = index">
+      <td>{{i+1}}</td>
       <td>{{item.Country}}</td>
       <td>{{item.TotalDeaths}}</td>
   </tr>
 </table>
-
-
-
-<router-outlet></router-outlet>
